--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/node": "^12.7.5",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "typescript": "^3.6.3"
   },
   "directories": {
     "dist": "./dist"
@@ -30,6 +31,7 @@
   ],
   "license": "MIT",
   "main": "index.js",
+  "types": "dist/index.d.ts",
   "name": "@ns8/magento2-rest-client",
   "repository": {
     "type": "git",
@@ -37,9 +39,10 @@
   },
   "scripts": {
     "prebuild": "npm run clean",
+    "prepublish": "npm run clean && npm run build",
     "build": "tsc",
     "clean": "rimraf dist",
-    "pretest": "npm run build",
+    "install": "npm run build",
     "test": "mocha --ui tdd --recursive ./test"
   },
   "version": "0.1.5"
