--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "prebuild": "npm run clean",
-    "prepublish": "npm run clean && npm run build",
+    "prepare": "npm run clean && npm run build",
     "build": "tsc",
     "clean": "rimraf dist",
     "install": "npm run build",
