--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
     "module": "commonjs",
     "declaration": true,
     "noImplicitAny": false,
-    "removeComments": true,
+    "removeComments": false,
     "noLib": false,
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "strictNullChecks": true,
     "target": "es2017",
     "sourceMap": true,
     "outDir": "dist"
