--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
   "description": "REST client for accessing Magento 2 functionality.",
   "devDependencies": {
     "@types/node": "^12.7.5",
+    "awesome-typescript-loader": "~5.2",
     "chai": "^4.2.0",
+    "clean-webpack-plugin": "~0.1",
+    "cross-env": "^6.0.2",
+    "dts-bundle": "^0.7.3",
     "mocha": "^6.2.0",
     "rimraf": "^3.0.0",
+    "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-merge": "^4.2.2",
     "yarn": "^1.17.3"
   },
   "directories": {
@@ -32,16 +42,17 @@
     "client"
   ],
   "license": "MIT",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/app.js",
+  "types": "dist/app.d.ts",
   "name": "@ns8/magento2-rest-client",
   "repository": "git+https://github.com/ns8inc/magento2-rest-client.git",
   "scripts": {
     "prebuild": "yarn clean",
-    "build": "tsc",
-    "clean": "rimraf dist",
+    "build": "tsc && yarn webpack",
+    "clean": "rimraf tmp && rimraf dist",
     "prepack": "yarn build",
-    "test": "mocha --ui tdd --recursive ./test"
+    "test": "mocha --ui tdd --recursive ./test",
+    "webpack": "webpack"
   },
   "version": "0.2.6",
   "private": false
