--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "strictNullChecks": true,
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "tmp"
   },
   "include": [
     "src/**/*"
@@ -19,6 +19,7 @@
   "exclude": [
     "node_modules",
     "test/**/*",
+    "tmp",
     "dist"
   ]
 }
