--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
     "url": "https://github.com/ns8inc/magento2-rest-client/issues"
   },
   "dependencies": {
-    "oauth-1.0a": "^1.0.1",
-    "request": "^2.72.0",
-    "winston": "^3.2.1"
+    "global": "^4.4.0",
+    "oauth-1.0a": "1.0.1",
+    "request": "2.88.0",
+    "winston": "3.2.1"
   },
   "deprecated": false,
   "description": "REST client for accessing Magento 2 functionality.",
   "devDependencies": {
-    "@types/node": "^12.7.5",
-    "awesome-typescript-loader": "~5.2",
-    "chai": "^4.2.0",
-    "clean-webpack-plugin": "~0.1",
-    "cross-env": "^6.0.2",
-    "dts-bundle": "^0.7.3",
-    "mocha": "^6.2.0",
-    "rimraf": "^3.0.0",
-    "ts-loader": "^6.2.0",
-    "typescript": "^3.6.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1",
-    "webpack-merge": "^4.2.2",
-    "yarn": "^1.17.3"
+    "@types/node": "12.7.11",
+    "awesome-typescript-loader": "5.2.1",
+    "clean-webpack-plugin": "3.0.0",
+    "cross-env": "6.0.3",
+    "dotenv": "8.1.0",
+    "dts-bundle": "0.7.3",
+    "rimraf": "3.0.0",
+    "ts-loader": "6.2.0",
+    "typedoc": "0.15.0",
+    "typescript": "3.6.3",
+    "uglifyjs-webpack-plugin": "2.2.0",
+    "webpack": "4.41.0",
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.1",
+    "webpack-merge": "4.2.2",
+    "yarn": "^1.19.1"
   },
   "directories": {
     "dist": "./dist"
@@ -48,11 +49,12 @@
   "repository": "git+https://github.com/ns8inc/magento2-rest-client.git",
   "scripts": {
     "prebuild": "yarn clean",
-    "build": "tsc && yarn webpack",
+    "build": "tsc && yarn webpack && rimraf tmp",
     "clean": "rimraf tmp && rimraf dist",
     "prepack": "yarn build",
     "test": "mocha --ui tdd --recursive ./test",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "docs": "typedoc"
   },
   "version": "0.2.9",
   "private": false
