--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
     "url": "https://github.com/ns8inc/magento2-rest-client/issues"
   },
   "dependencies": {
-    "http-errors": "1.7.3",
-    "oauth-1.0a": "1.0.1",
-    "request": "2.88.0",
-    "stacktracey": "^1.2.122",
-    "winston": "3.2.1"
+
   },
   "deprecated": false,
   "description": "REST client for accessing Magento 2 functionality.",
@@ -22,15 +18,21 @@
     "cross-env": "6.0.3",
     "dotenv": "8.1.0",
     "dts-bundle": "0.7.3",
+    "hard-source-webpack-plugin": "0.13.1",
+    "http-errors": "1.7.3",
+    "oauth-1.0a": "1.0.1",
+    "request": "2.88.0",
     "rimraf": "3.0.0",
+    "stacktracey": "^1.2.122",
     "ts-loader": "6.2.0",
     "typedoc": "0.15.0",
     "typescript": "3.6.3",
     "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.41.0",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.1",
     "webpack-merge": "4.2.2",
+    "webpack": "4.41.0",
+    "winston": "3.2.1",
     "yarn": "^1.19.1"
   },
   "directories": {
@@ -52,13 +54,13 @@
   "name": "@ns8/magento2-rest-client",
   "repository": "git+https://github.com/ns8inc/magento2-rest-client.git",
   "scripts": {
-    "prebuild": "yarn clean",
     "build": "tsc && yarn webpack && rimraf tmp",
     "clean": "rimraf tmp && rimraf dist",
+    "docs": "typedoc",
+    "prebuild": "yarn clean",
     "prepack": "yarn build",
     "test": "mocha --ui tdd --recursive ./test",
-    "webpack": "webpack",
-    "docs": "typedoc"
+    "webpack": "webpack"
   },
   "version": "0.2.12",
   "private": false
