--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "awesomeTypescriptLoaderOptions": {
     "reportFiles": ["src/**/*.{ts,tsx}"],
-    "useCache": true
+    "useCache": true,
+    "isolatedModules": true
   },
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "incremental": true,
     "module": "commonjs",
     "noImplicitAny": false,
     "noLib": false,
