Enable production, minified builds.

--- a/package.json
+++ b/package.json
@@ -8,30 +8,28 @@
   "description": "REST client for accessing Magento 2 functionality.",
   "devDependencies": {
     "@types/http-errors": "1.6.2",
-    "@types/node": "12.7.12",
+    "@types/node": "12.11.1",
     "@types/request": "2.48.3",
     "@types/winston": "2.4.4",
     "awesome-typescript-loader": "5.2.1",
-    "clean-webpack-plugin": "3.0.0",
     "cross-env": "6.0.3",
-    "dotenv": "8.1.0",
+    "dotenv": "8.2.0",
     "dts-bundle": "0.7.3",
     "hard-source-webpack-plugin": "0.13.1",
     "http-errors": "1.7.3",
     "oauth-1.0a": "1.0.1",
     "request": "2.88.0",
     "rimraf": "3.0.0",
-    "stacktracey": "^1.2.122",
+    "stacktracey": "1.2.122",
     "ts-loader": "6.2.0",
     "typedoc": "0.15.0",
     "typescript": "3.6.4",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.41.1",
+    "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.2",
     "webpack-merge": "4.2.2",
     "winston": "3.2.1",
-    "yarn": "^1.19.1"
+    "yarn": "1.19.1"
   },
   "directories": {
     "dist": "./dist"
@@ -53,9 +51,13 @@
   "repository": "git+https://github.com/ns8inc/magento2-rest-client.git",
   "scripts": {
     "build": "tsc -d && yarn webpack",
+    "build:dev": "set NODE_ENV=development yarn && yarn build && yarn link",
+    "clean": "rimraf .awcache .tmp dist node_modules",
     "docs": "typedoc",
     "prepack": "yarn build",
     "test": "mocha --ui tdd --recursive ./test",
+    "rebuild": "yarn clean && yarn build",
+    "rebuild:dev": "yarn clean && yarn build:dev",
     "webpack": "webpack"
   },
   "version": "0.2.18",
