Added OrderState and OrderStatus enums. Updated the unit tests to use Jest and refactored tests to be in TS. Updated the API and models to allow correctly settings comments.

--- a/package.json
+++ b/package.json
@@ -7,25 +7,30 @@
   "description": "REST client for accessing Magento 2 functionality.",
   "devDependencies": {
     "@types/http-errors": "1.6.2",
-    "@types/node": "12.11.1",
+    "@types/jest": "22.2.3",
+    "@types/node": "12.11.5",
     "@types/request": "2.48.3",
     "@types/winston": "2.4.4",
     "awesome-typescript-loader": "5.2.1",
+    "create-ts-index": "1.12.0",
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
     "dts-bundle": "0.7.3",
     "hard-source-webpack-plugin": "0.13.1",
     "http-errors": "1.7.3",
+    "jest": "24.9.0",
     "oauth-1.0a": "1.0.1",
     "request": "2.88.0",
     "rimraf": "3.0.0",
     "stacktracey": "1.2.122",
-    "ts-loader": "6.2.0",
+    "ts-jest": "24.1.0",
+    "ts-loader": "6.2.1",
+    "ts-node": "8.4.1",
     "typedoc": "0.15.0",
     "typescript": "3.6.4",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2",
+    "webpack-dev-server": "3.9.0",
     "webpack-merge": "4.2.2",
     "winston": "3.2.1",
     "yarn": "1.19.1"
@@ -49,15 +54,17 @@
   "name": "@ns8/magento2-rest-client",
   "repository": "git+https://github.com/ns8inc/magento2-rest-client.git",
   "scripts": {
-    "build": "tsc -d && yarn webpack",
+    "build": "yarn generate:exports && tsc -d && yarn webpack",
     "build:dev": "set NODE_ENV=development yarn && yarn build && yarn link",
     "clean": "rimraf .awcache .tmp dist node_modules",
     "docs": "typedoc",
+    "generate:exports": "yarn cti create ./src -w -n",
     "prepack": "yarn build",
-    "test": "mocha --ui tdd --recursive ./test",
     "rebuild": "yarn clean && yarn build",
     "rebuild:dev": "yarn clean && yarn build:dev",
+    "test": "jest",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
     "webpack": "webpack"
   },
-  "version": "0.2.21"
+  "version": "0.2.22"
 }
